# libmorton

./: .gitignore  CMakeLists.txt
test/: build_linux.sh  libmorton_test.h  makefile
test/msvc2015/: libmorton_test.vcxproj  libmorton_test.vcxproj.filters
test/msvc2017/: libmorton_test.vcxproj  libmorton_test.vcxproj.filters
test/msvc2019/: libmorton_test.vcxproj  libmorton_test.vcxproj.filters
